Improved formatting, made some content changes

--- a/resume.html
+++ b/resume.html
@@ -24,7 +24,7 @@
                     223 South Blvd<br>
                     Salisbury, MD 21801<br>
                     765-721-7779<br>
-                    See contact page for email
+                    Use contact page to send an email
                 </p>
                 <p>You can download this resume in
                         <a href="file/doc/Jordan Knapp Resume.docx">.docx</a> and
@@ -87,10 +87,10 @@
                         <li>Experience using Git to collaborate with others</li>
                         <li>Experience following Agile principles to develop software</li>
                     </ul>
-                    <li>Experience in hardware installation, including several computer builds, both laptop and
-                        desktop.</li>
+                    <li>Experience in hardware installation, including several computer builds, both laptop and desktop.</li>
                 </ul>
             </section>
         </main>
     </body>
+    <footer>Copyright 2022 Jordan Knapp</footer>
 </html>
