--- a/smashold.html
+++ b/smashold.html
@@ -21,16 +21,9 @@
         <main>
             <section>
                 <h1>Smash Character Picker Old Versions</h1>
-                <p>These are all the old versions of the Smash Bros. Character Picker, from 1.0 through 9.0. These are
-                    also tagged on
-                    <a href="https://github.com/jordanknapp00/Smash-Character-Picker/tags">GitHub</a>. For more
-                    details, see the README that comes with each version on GitHub.
-                    <br><br>
-                    Note that many versions feature differently-formatted tier lists from one another. The current tier
-                    list format (including the ability to add comments) wasn't adopted until the latest version. As
-                    such, each version comes with its own tier list file to use, and they generally cannot be mixed and
-                    matched with other versions. A .jar file is also included with each download.
-                </p>
+                <p>These are all the old versions of the Smash Bros. Character Picker, from 1.0 through 9.0. These are also tagged on <a href="https://github.com/jordanknapp00/Smash-Character-Picker/tags">GitHub</a>. For more details, see the README that comes with each version on GitHub.
+                <br><br>
+                Note that many versions feature differently-formatted tier lists from one another. The current tier list format (including the ability to add comments) wasn't adopted until the latest version. As such, each version comes with its own tier list file to use, and they generally cannot be mixed and matched with other versions. An executable .jar file is also included with each download.</p>
             </section>
             <section>
                 <table>
@@ -44,18 +37,9 @@
                     </tr>
                     <tr>
                         <th>Description</th>
-                        <td>A simple, text-based program designed to be run in the IDE. The tiers are defined directly
-                            as ArrayLists. There are exclusion lists for each player, but there is no "Cannot Get"
-                            buffer and no system to prevent duplicate matchups. In fact, the program halts after a match
-                            is generated, so there would be no way to implement those systems in this version of the
-                            program anyways. It became clear very quickly that I needed to add a GUI (something I had
-                            to teach myself) and make many more changes in order to allow the program to do everything I
-                            wanted it to be able to do.
-                            <br><br>
-                            <b>Note: In order to see the output of this version of the program, you'll need to run the .jar
-                                via the command line, or compile and run the code in an IDE.
-                            </b>
-                        </td>
+                        <td>A simple, text-based program designed to be run in the IDE. The tiers are defined directly as ArrayLists. There are exclusion lists for each player, but there is no "Cannot Get" buffer and no system to prevent duplicate matchups. In fact, the program halts after a match is generated, so there would be no way to implement those systems in this version of the program anyways. It became clear very quickly that I needed to add a GUI (something I had to teach myself) and make many more changes in order to allow the program to do everything I wanted it to be able to do.
+                        <br><br>
+                        <b>Note: In order to see the output of this version of the program, you'll need to run the .jar via the command line, or compile and run the code in an IDE.</b></td>
                     </tr>
                     <tr>
                         <th>Download</th>
@@ -74,14 +58,7 @@
                     </tr>
                     <tr>
                         <th>Description</th>
-                        <td>The original graphical version of the program. All later versions have in some way been
-                            based on this one, though the interface has been refined many times. This version features
-                            a very small window, with settings on the left and the results on the right. There is an
-                            "Additional settings" button, but it doesn't do anything. It also features a menu bar,
-                            something missing from the current versions of the UI. Aside from being able to select the
-                            number of players and change which tiers are being used, the program is still about as
-                            bare-bones as v1.0.
-                        </td>
+                        <td>The original graphical version of the program. All later versions have in some way been based on this one, though the interface has been refined many times. This version features a very small window, with settings on the left and the results on the right. There is an "Additional settings" button, but it doesn't do anything. It also features a menu bar, something missing from the current versions of the UI. Aside from being able to select the number of players and change which tiers are being used, the program is still about as bare-bones as v1.0.</td>
                     </tr>
                     <tr>
                         <th>Download</th>
@@ -100,12 +77,7 @@
                     </tr>
                     <tr>
                         <th>Description</th>
-                        <td>This version was never finished and was abandoned in favor of v4.0. As such, it is not
-                            available to download. This version was to feature two different tier generation algorithms,
-                            but when I decided to abandon this functionality, I simply moved on to the next version.
-                            However, this version did feature the first iteration of more or less every feature seen in 
-                            v4.0. One could consider this a beta for v4.0, basically.
-                        </td>
+                        <td>This version was never finished and was abandoned in favor of v4.0. As such, it is not available to download. This version was to feature two different tier generation algorithms, but when I decided to abandon this functionality, I simply moved on to the next version. However, this version did feature the first iteration of more or less every feature seen in v4.0. One could consider this a beta for v4.0, basically.</td>
                     </tr>
                     <tr>
                         <th>Download</th>
@@ -124,17 +96,9 @@
                     </tr>
                     <tr>
                         <th>Description</th>
-                        <td>This version features a finalized version of the UI that was first implemented in v3.0. 
-                            This includes an even smaller window than v2.0, with all the settings being put behind a
-                            window accessed through the menu bar. This version includes the same settings as v2.1, but
-                            also includes two new settings (which were actually introduced in the unfinished v3.0): the
-                            option to set custom tier chances and the introduction of the "Cannot Get" buffer, features
-                            which persist to this day. However, in this version, the function of the "Cannot Get" buffer
-                            is slightly different.
-                            <br><br>
-                            <b>Note: The README for this project erroneously lists it as version 2.0. This was a mistake
-                                that I didn't catch for a while after committing it to GitHub.</b>
-                        </td>
+                        <td>This version features a finalized version of the UI that was first implemented in v3.0. This includes an even smaller window than v2.0, with all the settings being put behind a window accessed through the menu bar. This version includes the same settings as v2.1, but also includes two new settings (which were actually introduced in the unfinished v3.0): the option to set custom tier chances and the introduction of the "Cannot Get" buffer, features which persist to this day. However, in this version, the function of the "Cannot Get" buffer is slightly different.
+                        <br><br>
+                        <b>Note:</b> The README for this project erroneously lists it as version 2.0. This was a mistake that I didn't catch for a while after committing it to GitHub.</td>
                     </tr>
                     <tr>
                         <th>Download</th>
@@ -153,18 +117,7 @@
                     </tr>
                     <tr>
                         <th>Description</th>
-                        <td>This version features the first edition of the current, menu bar-less UI. All settings are
-                            instead simply located to the left of the results field. The settings have also been
-                            simplified, removing the settings from v2.1, but keeping the settings added in v4.2. The
-                            soundboard has also been implemented for the first time. Finally, a new functionality under
-                            the hood, the CannotGetQueue,
-                            has been added. This is basically a special data structure that handles the
-                            "Cannot Get" buffer in a simpler manner than v4.2 did. Also, this version features the
-                            modern version of the "Cannot Get" buffer, where <i>all</i> fighters in a battle are
-                            restricted from being chosen again for a set period of time. However, this version does not
-                            include the "Individual Cannot Get" system yet. This can be considered the first modern
-                            version of the program, with all future versions being built off this one.
-                        </td>
+                        <td>This version features the first edition of the current, menu bar-less UI. All settings are instead simply located to the left of the results field. The settings have also been simplified, removing the settings from v2.1, but keeping the settings added in v4.2. The soundboard has also been implemented for the first time. Finally, a new functionality under the hood, the CannotGetQueue, has been added. This is basically a special data structure that handles the "Cannot Get" buffer in a simpler manner than v4.2 did. Also, this version features the modern version of the "Cannot Get" buffer, where <i>all</i> fighters in a battle are restricted from being chosen again for a set period of time. However, this version does not include the "Individual Cannot Get" system yet. This can be considered the first modern version of the program, with all future versions being directly derived from this one.</td>
                     </tr>
                     <tr>
                         <th>Download</th>
@@ -183,13 +136,7 @@
                     </tr>
                     <tr>
                         <th>Description</th>
-                        <td>This version introduces the switch feature, though it can be somewhat buggy here.
-                            The skip button is also introduced. Finally, the "Individual Cannot Get" system has been
-                            implemented. As such, the current version of the "Cannot Get" system is now in place, with the
-                            exception of the favorites feature. See the README on
-                            <a href="https://github.com/jordanknapp00/Smash-Character-Picker">GitHub</a> for a
-                            more detailed explanation on how exactly it works.
-                        </td>
+                        <td>This version introduces the switch feature, though it can be somewhat buggy here. The skip button is also introduced. Finally, the "Individual Cannot Get" system has been implemented. As such, the current version of the "Cannot Get" system is now in place, with the exception of the favorites feature. See the README on <a href="https://github.com/jordanknapp00/Smash-Character-Picker">GitHub</a> for a more detailed explanation on how exactly it works.</td>
                     </tr>
                     <tr>
                         <th>Download</th>
@@ -208,15 +155,7 @@
                     </tr>
                     <tr>
                         <th>Description</th>
-                        <td>This version introduces the favorites system, in which players can mark certain fighters as
-                            their favorites, allowing them to get those fighters multiple times in a session. Once again,
-                            more details on how it works under the hood can be found in the README on GitHub.
-                            Otherwise, there are minimal changes in this version. It was enough work that I gave it its
-                            own project in Eclipse, that's why it's listed as a separate version here and on GitHub. Most of
-                            the time, when I made incremental updates (i.e. v2.0 to v2.1 or v4.0 through v4.2), I didn't
-                            create a new project locally, which is why only the latest version of each major iteration is
-                            kept. The exception being v6.0 and v6.4.
-                        </td>
+                        <td>This version introduces the favorites system, in which players can mark certain fighters as their favorites, allowing them to get those fighters multiple times in a session. Once again, more details on how it works under the hood can be found in the README on GitHub. Otherwise, there are minimal changes in this version. It was enough work that I gave it its own project in Eclipse, that's why it's listed as a separate version here and on GitHub. Most of the time, when I made incremental updates (i.e. v2.0 to v2.1 or v4.0 through v4.2), I didn't create a new project locally, which is why only the latest version of each major iteration is kept. The exception being v6.0 and v6.4.</td>
                     </tr>
                     <tr>
                         <th>Download</th>
@@ -235,10 +174,7 @@
                     </tr>
                     <tr>
                         <th>Description</th>
-                        <td>This version introduces the debug menu. Old versions printed their debug logs to stdout, but
-                            the debug menu allows viewing logs and error messages without the IDE running, as everything
-                            is printed to both stdout and the debug's text field.
-                        </td>
+                        <td>This version introduces the debug menu. Old versions printed their debug logs to stdout, but the debug menu allows viewing logs and error messages without the IDE running, as everything is printed to both stdout and the debug's text field.</td>
                     </tr>
                     <tr>
                         <th>Download</th>
@@ -257,10 +193,7 @@
                     </tr>
                     <tr>
                         <th>Description</th>
-                        <td>This version introduces the stat-tracking system. Each player's winrate with each fighter
-                            can be tracked. Fighters can also be sorted by their overall winrate, each player's winrate,
-                            and the total number of battles they've appeared in.
-                        </td>
+                        <td>This version introduces the stat tracking system. Each player's winrate with each fighter can be tracked. Fighters can also be sorted by their overall winrate, each player's winrate, and the total number of battles they've appeared in.</td>
                     </tr>
                     <tr>
                         <th>Download</th>
@@ -279,13 +212,7 @@
                     </tr>
                     <tr>
                         <th>Description</th>
-                        <td>v9.0 was originally intended to be the final version of the program. The changes are relatively
-                            minor, mostly small, under the hood things. A handful of bug fixes and a good amount of code
-                            optimization, basically. It features inline functions for
-                            <span style="font-family:'Courier New', Courier, monospace">ActionListner</span> classes. And the
-                            soundboard has essentially been rewritten from scratch to reduce code duplication. It went from
-                            around 700 lines to around 300. Other than that, few changes in this version.
-                        </td>
+                        <td>v9.0 was originally intended to be the final version of the program. The changes are relatively minor, mostly small, under the hood things. A handful of bug fixes and a good amount of code optimization, basically. It features inline functions for <span style="font-family:'Courier New', Courier, monospace">ActionListner</span> classes. And the soundboard has essentially been rewritten from scratch to reduce code duplication. It went from around 700 lines to around 300. Other than that, there are few changes in this version.</td>
                     </tr>
                     <tr>
                         <th>Download</th>
@@ -296,4 +223,5 @@
             <br><br>
         </main>
     </body>
+    <footer>Copyright 2022 Jordan Knapp</footer>
 </html>
