--- a/index.html
+++ b/index.html
@@ -23,13 +23,9 @@
                 <figure>
                     <img src="file/img/me.jpg" alt="A photo of me.">
                 </figure>
-                <p>Hi, I'm Jordan Knapp. I'm a senior computer science student at the University of Maryland, graduating
-                    this May. My main interest is software engineering, though I'm also interested in lower-level systems
-                    work and game development.
-                    <br><br>
-                    Check out my resume and portfolio using the links above, and feel free to send me an email
-                    using the contact page. Other important links are listed below.
-                </p>
+                <p>Hi, I'm Jordan Knapp. I'm a senior computer science student at the University of Maryland, graduating this May. My main interest is software engineering, though I'm also interested in lower-level systems work and game development.
+                <br><br>
+                Check out my resume and portfolio using the links above, and feel free to send me an email using the contact page. Other important links are listed below.</p>
             </section>
             <section class="home">
                 <h2>Links</h2>
@@ -40,4 +36,5 @@
             </section>
         </main>
     </body>
+    <footer>Copyright 2022 Jordan Knapp</footer>
 </html>
