Content editing ; moved school projects to separate page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <figure>
                     <img src="file/img/me.jpg" alt="A photo of me.">
                 </figure>
-                <p>Hi, I'm Jordan Knapp. I'm a senior computer science student at the University of Maryland, graduating this May. My main interest is software engineering, though I'm also interested in lower-level systems work and game development.
+                <p>Hi, I'm Jordan Knapp. I recently graduated from the University of Maryland with a degree in computer science. I'm looking for a job! My primary area of interest is software engineering, though I'm also interested in lower-level systems work and game development.
                 <br><br>
                 Check out my resume and portfolio using the links above, and feel free to send me an email using the contact page. Other important links are listed below.</p>
             </section>
