--- a/smashold.html
+++ b/smashold.html
@@ -33,13 +33,13 @@
                     </tr>
                     <tr>
                         <th>Date</th>
-                        <th>May 2019</th>
+                        <th>March 2019</th>
                     </tr>
                     <tr>
                         <th>Description</th>
                         <td>A simple, text-based program designed to be run in the IDE. The tiers are defined directly as ArrayLists. There are exclusion lists for each player, but there is no "Cannot Get" buffer and no system to prevent duplicate matchups. In fact, the program halts after a match is generated, so there would be no way to implement those systems in this version of the program anyways. It became clear very quickly that I needed to add a GUI (something I had to teach myself) and make many more changes in order to allow the program to do everything I wanted it to be able to do.
                         <br><br>
-                        <b>Note: In order to see the output of this version of the program, you'll need to run the .jar via the command line, or compile and run the code in an IDE.</b></td>
+                        <b>This program is text-based, designed to be run from the command line or in an IDE, such as Eclipse.</b></td>
                     </tr>
                     <tr>
                         <th>Download</th>
@@ -58,7 +58,7 @@
                     </tr>
                     <tr>
                         <th>Description</th>
-                        <td>The original graphical version of the program. All later versions have in some way been based on this one, though the interface has been refined many times. This version features a very small window, with settings on the left and the results on the right. There is an "Additional settings" button, but it doesn't do anything. It also features a menu bar, something missing from the current versions of the UI. Aside from being able to select the number of players and change which tiers are being used, the program is still about as bare-bones as v1.0.</td>
+                        <td>The original graphical version of the program. This version features a very small window, with settings on the left and the results on the right. There is an "Additional settings" button, but it doesn't do anything. It also features a menu bar, something missing from the current versions of the UI. Aside from being able to select the number of players and change which tiers are being used, the program is still about as bare-bones as v1.0.</td>
                     </tr>
                     <tr>
                         <th>Download</th>
@@ -77,7 +77,7 @@
                     </tr>
                     <tr>
                         <th>Description</th>
-                        <td>This version was never finished and was abandoned in favor of v4.0. As such, it is not available to download. This version was to feature two different tier generation algorithms, but when I decided to abandon this functionality, I simply moved on to the next version. However, this version did feature the first iteration of more or less every feature seen in v4.0. One could consider this a beta for v4.0, basically.</td>
+                        <td>This version was never finished and was abandoned in favor of v4.0. As such, it is not available to download. This version was to feature two different tier generation algorithms, but I decided to abandon this functionality. I simply moved on to the next version after that. However, this version did feature the first iteration of more or less every feature seen in v4.0. One could consider this a beta for v4.0, basically.</td>
                     </tr>
                     <tr>
                         <th>Download</th>
@@ -174,7 +174,7 @@
                     </tr>
                     <tr>
                         <th>Description</th>
-                        <td>This version introduces the debug menu. Old versions printed their debug logs to stdout, but the debug menu allows viewing logs and error messages without the IDE running, as everything is printed to both stdout and the debug's text field.</td>
+                        <td>This version introduces the debug menu. Old versions printed their debug logs to the standard output, but the debug menu allows viewing logs and error messages without the IDE running, as everything is printed to both stdout and the debug's text field.</td>
                     </tr>
                     <tr>
                         <th>Download</th>
