--- a/resume.html
+++ b/resume.html
@@ -79,7 +79,7 @@
                     </ul>
                     <li>Web Development</li>
                     <ul>
-                        <li>Knowledgable with HTML and CSS</li>
+                        <li>Knowledgeable with HTML and CSS</li>
                         <li>Experience with the Django framework to develop web apps using Python</li>
                     </ul>
                     <li>Able to work effectively in a team environment</li>
