--- a/smashold.html
+++ b/smashold.html
@@ -193,7 +193,7 @@
                     </tr>
                     <tr>
                         <th>Description</th>
-                        <td>This version introduces the stat tracking system. Each player's winrate with each fighter can be tracked. Fighters can also be sorted by their overall winrate, each player's winrate, and the total number of battles they've appeared in.</td>
+                        <td>This version introduces the stat tracking system. Each player's win rate with each fighter can be tracked. Fighters can also be sorted by their overall win rate, each player's win rate, and the total number of battles they've appeared in.</td>
                     </tr>
                     <tr>
                         <th>Download</th>
@@ -212,7 +212,7 @@
                     </tr>
                     <tr>
                         <th>Description</th>
-                        <td>v9.0 was originally intended to be the final version of the program. The changes are relatively minor, mostly small, under the hood things. A handful of bug fixes and a good amount of code optimization, basically. It features inline functions for <span style="font-family:'Courier New', Courier, monospace">ActionListner</span> classes. And the soundboard has essentially been rewritten from scratch to reduce code duplication. It went from around 700 lines to around 300. Other than that, there are few changes in this version.</td>
+                        <td>v9.0 was originally intended to be the final version of the program. The changes are relatively minor, mostly small, under the hood things. A handful of bug fixes and a good amount of code optimization, basically. It features inline functions for <span style="font-family:'Courier New', Courier, monospace">ActionListener</span> classes. And the soundboard has essentially been rewritten from scratch to reduce code duplication. It went from around 700 lines to around 300. Other than that, there are few changes in this version.</td>
                     </tr>
                     <tr>
                         <th>Download</th>
