Updated portfolio to reflect new Smash Character Picker version

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
                     </tr>
                     <tr>
                         <th>Description</th>
-                        <td>A program that selects random matchups for the game <i>Super Smash Bros.</i> A tier list, defined in a .txt file, is used to determine fair matchups. Matches with up to 8 players are supported. There are systems to prevent duplicate matchups, in order to keep things fresh. There is also a built-in soundboard and a statistics tracking system. There are a variety of other settings to customize the experience. More details can be found in the README on GitHub.
+                        <td>A program that selects random matchups for the game <i>Super Smash Bros.</i> A tier list, defined in a .txt file, is used to determine fair matchups. Matches with up to 8 players are supported. There are systems to prevent duplicate matchups, in order to keep things fresh. There is a built-in stat-tracking system and a variety of other settings to customize the experience. More details can be found in the README on GitHub.
                         <br><br>
                         This was my first time designing a program that is not text-based, and as a result, I had to teach myself how to use the Java Swing library. The result is one of the largest and most complex projects I've worked on, school project or not.
                         <br><br>
@@ -54,7 +54,7 @@
                         <th>Download</th>
                         <td class="table-center">
                             <a href="https://github.com/jordanknapp00/Smash-Character-Picker">GitHub</a>&ensp;
-                            <a href="file/proj/Smash-Character-Picker-10.1.zip" download>.zip file</a>&ensp;
+                            <a href="file/proj/Smash-Character-Picker-11.0.zip" download>.zip file</a>&ensp;
                             <a href="smashold.html">Older versions</a>
                         </td>
                     </tr>
