--- a/smashold.html
+++ b/smashold.html
@@ -219,6 +219,25 @@
                         <td class="table-center"><a href="file/proj/Smash-Character-Picker-9.0.zip" download>Download</a></td>
                     </tr>
                 </table>
+                <br>
+                <table>
+                    <tr>
+                        <th>Version</th>
+                        <th>v10.1.2</th>
+                    </tr>
+                    <tr>
+                        <th>Date</th>
+                        <th>March 2022</th>
+                    </tr>
+                    <tr>
+                        <th>Description</th>
+                        <td>For v10.0, I more or less re-wrote the program from scratch. Well, a lot of the code remained the same, but the structure of the program changed drastically. Before, almost everything was in a single class, the only exception being the data structures. For this version of the program, I separated out responsibilities into numerous classes. The result isn't perfect, but the program is made more readable,  in my opinion.</td>
+                    </tr>
+                    <tr>
+                        <th>Download</th>
+                        <td class="table-center"><a href="file/proj/Smash-Character-Picker-10.1.2.zip" download>Download</a></td>
+                    </tr>
+                </table>
             </section>
             <br><br>
         </main>
