Implemented dropdown nav menu

--- a/index.html
+++ b/index.html
@@ -13,8 +13,19 @@
         <nav>
             <ul>
                 <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="resume.html">Resume</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="resume.html">Resume</a>
+                    <ul>
+                        <a href="file/doc/Jordan Knapp Resume.docx" download>.docx Download</a>
+                        <a href="file/doc/Jordan Knapp Resume.pdf" download>.pdf Download</a>
+                    </ul>
+                </li>
+                <li><a href="portfolio.html">Portfolio</a>
+                    <ul>
+                        <a href="portfolio.html#major">Major Projects</a>
+                        <a href="portfolio.html#minor">Minor Projects</a>
+                        <a href="schoolprojects.html">School Projects</a>
+                    </ul>
+                </li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
