--- a/portfolio.html
+++ b/portfolio.html
@@ -13,8 +13,19 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="resume.html">Resume</a></li>
-                <li><a class="active" href="portfolio.html">Portfolio</a></li>
+                <li><a href="resume.html">Resume</a>
+                    <ul>
+                        <a href="file/doc/Jordan Knapp Resume.docx" download>.docx Download</a>
+                        <a href="file/doc/Jordan Knapp Resume.pdf" download>.pdf Download</a>
+                    </ul>
+                </li>
+                <li><a class="active" href="portfolio.html">Portfolio</a>
+                    <ul>
+                        <a href="portfolio.html#major">Major Projects</a>
+                        <a href="portfolio.html#minor">Minor Projects</a>
+                        <a href="schoolprojects.html">School Projects</a>
+                    </ul>
+                </li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -24,6 +35,7 @@
                     <p>These are some of the various projects I've worked on in my spare time over the years. The tables below contain information about each project, as well as download links. Links to <a href="https://github.com/jordanknapp00">my GitHub</a> are available for the major projects, while .zip downloads are available for all projects. Downloads for Java projects will include an executable .jar file.</p>
             </section>
             <section>
+                <a id="major"></a>
                 <h2>Major Projects</h2>
                 <hr>
                 <p>Major projects are all fully-featured programs, larger in scope than minor projects. These all took a significant amount of time to develop.</p>
@@ -149,6 +161,7 @@
                 </table>
             </section>
             <section>
+                <a id="minor"></a>
                 <h2>Minor Projects</h2>
                 <hr>
                 <p>Minor projects are small programs, not as fully-featured or wide in scope as major projects. These are mostly text-based programs that quickly solve a problem, test something, or otherwise do something simpler than major projects. These are only available via .zip download. I didn't think they were important enough to warrant putting them on GitHub.</p>
