--- a/schoolprojects.html
+++ b/schoolprojects.html
@@ -13,15 +13,26 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="resume.html">Resume</a></li>
-                <li><a class="active" href="portfolio.html">Portfolio</a></li>
+                <li><a href="resume.html">Resume</a>
+                    <ul>
+                        <a href="file/doc/Jordan Knapp Resume.docx" download>.docx Download</a>
+                        <a href="file/doc/Jordan Knapp Resume.pdf" download>.pdf Download</a>
+                    </ul>
+                </li>
+                <li><a class="active" href="portfolio.html">Portfolio</a>
+                    <ul>
+                        <a href="portfolio.html#major">Major Projects</a>
+                        <a href="portfolio.html#minor">Minor Projects</a>
+                        <a href="schoolprojects.html">School Projects</a>
+                    </ul>
+                </li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <main>
             <section>
                 <h1>School Projects</h1>
-                <p>This is a collection of the most useful/interesting/challenging school projects I've worked on. They're broken up by course. A brief description, as well as any important skills I got from each project, are listed.
+                <p>During my time at UMD, I worked on over 50 school projects, ranging from basic programming all the way to a group project that attempts to simulate how software engineering is done in the industry. This is a collection of the most useful/interesting/challenging school projects I've worked on. They're broken up by course. A brief description, as well as any important skills I got from each project, are listed.
                 <br><br>
                 Hosting school projects publicly on GitHub or any other site isn't allowed, so if any potential employers would like access to these projects, <a href="contact.html">send me an email</a>.</p>
             </section>
