Updated portfolio with DungenGUI

--- a/portfolio.html
+++ b/portfolio.html
@@ -147,6 +147,37 @@
                         </td>
                     </tr>
                 </table>
+                <br>
+                <!-- Dungeon Generator GUI table -->
+                <table>
+                    <tr>
+                        <th>Name</th>
+                        <th>Dungeon Generator GUI (AKA DungenGUI)</th>
+                    </tr>
+                    <tr>
+                        <th>Language</th>
+                        <th>Delphi</th>
+                    </tr>
+                    <tr>
+                        <th>Date</th>
+                        <th>July 2022</th>
+                    </tr>
+                    <tr>
+                        <th>Description</th>
+                        <td>A version of Dungeon Generator that features a graphical interface. The algorithm is exactly the same as the command-line version, and all the same features are available. I wrote this program in Delphi as an exercise to familiarize myself with the language and learn the Delphi GUI designer for a job.
+                        <br><br>
+                        For details on how to use it, see the README for Dungen and the readme for this project itself on GitHub.
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Download</th>
+                        <td class="table-center">
+                            <a href="https://github.com/jordanknapp00/Dungeon-Generator-GUI">GitHub</a>&ensp;
+                            <a href="file/proj/dungengui.zip" download>Executable</a>&ensp;
+                            <a href="file/proj/dungengui-src.zip" download>Source code .zip</a>
+                        </td>
+                    </tr>
+                </table>
             </section>
             <section>
                 <h2>Minor Projects</h2>
